599
This is maybe better, maybe worse now: it compiles from all source, but not against the bytecode.
```scala
[paulp@leaf 750]$$ scalac AO.java a.scala 
[paulp@leaf 750]$$ scala Main
java.lang.ClassCastException: [I cannot be cast to [Ljava.lang.Object;
	at Main$$.main(a.scala:4)
	at Main.main(a.scala)
```
But:
```scala
[paulp@leaf 750]$$ javac AO.java 
[paulp@leaf 750]$$ scalac a.scala 
a.scala:4: error: type mismatch;
 found   : Array[Int]
 required: Array[? with java.lang.Object]
        AO.f(a)
             ^
one error found
```
